diesel_compile_tests/tests/fail/columns_cannot_be_rhs_of_insert.stderr
error[E0277]: the trait bound `ColumnInsertValue<columns::name, &columns::hair_color>: InsertValues<users::table, _>` is not satisfied
  --> $DIR/columns_cannot_be_rhs_of_insert.rs:20:10
   |
20 |         .execute(&mut conn)
   |          ^^^^^^^ the trait `InsertValues<users::table, _>` is not implemented for `ColumnInsertValue<columns::name, &columns::hair_color>`
   |
   = help: the following implementations were found:
             <ColumnInsertValue<Col, Expr> as InsertValues<<Col as Column>::Table, DB>>
             <ColumnInsertValue<Col, Expr> as InsertValues<<Col as Column>::Table, Sqlite>>
   = note: required because of the requirements on the impl of `QueryFragment<_>` for `ValuesClause<ColumnInsertValue<columns::name, &columns::hair_color>, users::table>`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `QueryFragment<_>` for `InsertStatement<users::table, ValuesClause<ColumnInsertValue<columns::name, &columns::hair_color>, users::table>>`
   = note: required because of the requirements on the impl of `ExecuteDsl<_, _>` for `InsertStatement<users::table, ValuesClause<ColumnInsertValue<columns::name, &columns::hair_color>, users::table>>`
